--- a/PASClient/MainWindow.xaml
+++ b/PASClient/MainWindow.xaml
@@ -9,6 +9,6 @@
     <Grid>
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Margin="10,10,0,10" Stroke="Black" Width="267"/>
         <Button x:Name="btnOpenChat" Content="Open chat" HorizontalAlignment="Left" Margin="38,31,0,0" VerticalAlignment="Top" Width="209" Height="49" Click="btnOpenFile_Click"/>
-        <TextBox x:Name="txtFileContent" Margin="282,10,10,10" TextWrapping="Wrap" Text=""/>
+        <Button x:Name="btnUploadTrainingFile" Content="Upload" HorizontalAlignment="Left" Margin="38,85,0,0" VerticalAlignment="Top" Width="209" Height="49" Click="btnUploadTrainingFile_Click"/>
     </Grid>
 </Window>
